# Option-Pricing-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmarks.py
dashboard/: app.py
docs/: agent_swarm_plan.md  architecture.md  mathematical_foundations.md
src/option_engine/: __init__.py  config.py  instruments.py
src/option_engine/analytics/: __init__.py  sensitivity.py
src/option_engine/benchmarks/: __init__.py  runner.py
src/option_engine/greeks/: __init__.py  analytical.py  numerical.py  types.py
src/option_engine/pricing/: __init__.py  base.py  binomial.py  black_scholes.py  monte_carlo.py
src/option_engine/simulations/: __init__.py  paths.py
tests/: conftest.py  test_binomial.py  test_black_scholes.py  test_greeks.py  test_integration.py  test_monte_carlo.py  test_sensitivity.py
